--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=main.css>
     <title>Hola :D</title>
 </head>
 <body>
-    <h1>Tebes Caldas</h1>
+    <header>
+        <h2>Logo</h2>
+        <nav>
+            <li a href>inicio</li>
+            <li>nosotros</li>
+            <li>contacto</li>
+        </nav>
+    </header>
 </body>
 </html>
