--- a/index.html
+++ b/index.html
@@ -16,5 +16,10 @@
             <li>contacto</li>
         </nav>
     </header>
+    <img src="https://img.freepik.com/vector-premium/paisaje-selva-cascada-paisaje-natural-tropical-cascada-rocas-arroyos-rio_212168-969.jpg?w=2000" alt="img01">
+
+    <img src="https://www.nacionrex.com/export/sites/debate/img/2023/03/01/capibara-meme-tiktok.jpg_276312520.jpg" alt="img02">
+
+    <img src="https://i.pinimg.com/550x/5e/70/26/5e70267cb4faeb52f7ecd9d8eb8f79b4.jpg" alt="img03">
 </body>
 </html>
