--- a/Semana1/practica01.html
+++ b/Semana1/practica01.html
@@ -21,6 +21,7 @@
         <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
         <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/Machu_Picchu%2C_Peru_%282018%29.jpg" alt="img01">
     </section>
+    <p>Fin de la practica</p>
 </body>
 <footer>Tebes Caldas</footer>
 </html>
